# schoolProjectC

./: .gitignore  CMakeLists.txt  README.md  add_edit_student.cpp  add_edit_student.h  add_student.cpp  add_student.h  edit_view_marks.cpp  edit_view_marks.h  main.cpp  main_window.cpp  main_window.h  students_review.cpp  students_review.h  useful_funcs.cpp  useful_funcs.h
uis/: add_edit_student.ui  add_student.ui  edit_and_view_marks.ui  edit_view_marks.ui  main_window.ui  student_edit.ui  students_overview.ui  students_review.ui  students_stats.ui
